# component-bingads-ex

./: .gitignore  .style.yapf  Dockerfile  README.md  bitbucket-pipelines.yml  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md  rowSchemaAlt1.json  rowSchemaAlt2.json
component_config/sample-config/: config_bulk_all.json
docs/: report_presets_columns_and_pk.md  reports_available_columns.json  reports_available_columns.md
scripts/: create_all_possible_report_columns_md.py  generate_report_requests_json_schema.py  update_configRowSchema_json.py
scripts/report_request_json_schema_fragments/: aggregation_property.json  columns_property_template.json  primary_key_property_template.json  report_request_template.json  time_property.json
src/: client.py  component.py
src/bingads_wrapper/: authorization.py  bulk.py  customer_management.py  error_handling.py  metadata_provider.py  prebuilt_configs.py  reference_presets.json  reporting.py  request.py  utils.py
src/bingads_wrapper/prebuilt_configs/: AccountPerformance.json  CampaignPerformance.json
tests/: test_component.py
