[project]
name = "component-bingads-ex"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies = [
    "backoff>=2.2.1",
    "bingads>=13.0.26",
    "freezegun>=1.5.5",
    "jsonschema>=4.25.1",
    "keboola-component>=1.6.13",
    "keboola-http-client>=1.2.0",
    "keboola-utils>=1.1.0",
    "mock>=5.2.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
